--- a/envify_generator/build.yaml
+++ b/envify_generator/build.yaml
@@ -1,16 +1,8 @@
-targets:
-  $default:
-    builders:
-      envify_generator|envify:
-        enabled: True
-
 builders:
   envify:
     import: "package:envify_generator/builder.dart"
     builder_factories: ["envifyBuilder"]
-    build_extensions:
-      .dart:
-        - envify.g.dart
+    build_extensions: {".dart": [".envify.g.part"]}
     build_to: cache
     auto_apply: dependents
     applies_builders: ["source_gen|combining_builder"]
